--- a/Android/App/app/src/main/res/xml/preferences.xml
+++ b/Android/App/app/src/main/res/xml/preferences.xml
@@ -26,7 +26,7 @@
       android:key="USE_CELLULAR_KEY"
       android:title="Use cellular data"
       android:summary="The app will use cellular data to upload surveys to the cloud."
-      android:defaultValue="true"
+      android:defaultValue="false"
       />
   </android.support.v7.preference.PreferenceCategory>
   <android.support.v7.preference.PreferenceCategory
