--- a/Android/App/app/src/main/res/layout/fragment_choose_primary_activity.xml
+++ b/Android/App/app/src/main/res/layout/fragment_choose_primary_activity.xml
@@ -31,7 +31,7 @@
       android:id="@+id/primaryActivityVector"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:text="Mosquito"
+      android:text="@string/mosquito"
       android:background="@color/white"
       android:textColor="@color/colorVectorAccent"
       android:layout_alignParentEnd="true"/>
@@ -40,7 +40,7 @@
       android:id="@+id/primaryActivityPatient"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:text="Patient"
+      android:text="@string/patient"
       android:background="@color/white"
       android:textColor="@color/colorAccent"
       android:layout_alignParentStart="true"/>
