--- a/Android/App/app/src/main/res/layout/fragment_choose_secondary_activity.xml
+++ b/Android/App/app/src/main/res/layout/fragment_choose_secondary_activity.xml
@@ -31,7 +31,7 @@
       android:id="@+id/secondaryActivityFalse"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:text="No"
+      android:text="@string/no"
       android:background="@color/white"
       android:textColor="@color/colorPrimaryText"
       android:layout_alignParentEnd="true"/>
@@ -40,7 +40,7 @@
       android:id="@+id/secondaryActivityTrue"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:text="Yes"
+      android:text="@string/yes"
       android:background="@color/white"
       android:textColor="@color/colorAccent"
       android:layout_alignParentStart="true"/>
