--- a/Android/App/app/src/main/res/layout/fragment_get_permission.xml
+++ b/Android/App/app/src/main/res/layout/fragment_get_permission.xml
@@ -31,7 +31,7 @@
       android:id="@+id/givePermission"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:text="Give permission"
+      android:text="@string/give_permission"
       android:background="@color/white"
       android:textColor="@color/colorAccent"
       android:layout_alignParentEnd="true"/>
