--- a/Android/App/app/src/main/res/layout/vector_form.xml
+++ b/Android/App/app/src/main/res/layout/vector_form.xml
@@ -20,7 +20,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="12sp"
-      android:text="Mosquito Species"/>
+      android:text="@string/mosquito_species"/>
     <Spinner
       style="@style/Widget.AppCompat.Spinner.Underlined"
       android:id="@+id/vectorSpecies"
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="Gender"
+        android:text="@string/gender"
         android:textSize="12sp"/>
 
       <RadioGroup
@@ -76,13 +76,13 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:checked="false"
-          android:text="Female"/>
+          android:text="@string/female"/>
 
         <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="44dp"
-          android:text="Male"/>
+          android:text="@string/male"/>
       </RadioGroup>
     </RelativeLayout>
 
@@ -95,7 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="Stage"
+        android:text="@string/stage"
         android:textSize="12sp"/>
 
       <RadioGroup
@@ -109,13 +109,13 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:checked="false"
-          android:text="Larva"/>
+          android:text="@string/larva"/>
 
         <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="56dp"
-          android:text="Adult"/>
+          android:text="@string/adult"/>
       </RadioGroup>
     </RelativeLayout>
 
@@ -128,7 +128,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="Has the mosquito fed?"
+        android:text="@string/has_the_mosquito_fed"
         android:textSize="12sp"/>
 
       <RadioGroup
@@ -142,38 +142,17 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:checked="false"
-          android:text="Yes"/>
+          android:text="@string/yes"/>
 
         <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="68dp"
-          android:text="No"/>
+          android:text="@string/no"/>
       </RadioGroup>
     </RelativeLayout>
 
   </LinearLayout>
-
-  <android.support.design.widget.TextInputLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/survey_field_top_margin"
-    android:visible="false"
-    >
-
-    <android.support.design.widget.TextInputEditText
-      android:id="@+id/vectorDna"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/survey_field_top_margin"
-      android:ems="10"
-      android:hint="DNA sequence"
-      android:inputType="text|textNoSuggestions"
-      android:maxLines="1"
-      android:text="@string/dna_field_label"
-      android:focusable="false"
-      android:clickable="true" />
-  </android.support.design.widget.TextInputLayout>
 
   <RelativeLayout
     android:layout_width="fill_parent"
@@ -185,7 +164,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="12sp"
-      android:text="Photo"/>
+      android:text="@string/photo"/>
     <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
