--- a/Android/App/app/src/main/res/layout/fragment_surveys.xml
+++ b/Android/App/app/src/main/res/layout/fragment_surveys.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.SwipeRefreshLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/swipeContainer"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
 <android.support.v7.widget.RecyclerView
   android:id="@+id/surveysList"
-  xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/survey_item_vertical_margin"
   android:paddingLeft="@dimen/survey_item_horizontal_margin"
   android:paddingRight="@dimen/survey_item_horizontal_margin"
   android:paddingTop="@dimen/survey_item_vertical_margin"/>
-
+</android.support.v4.widget.SwipeRefreshLayout>
